# embedded

./: README.md
DebugFromTerminal/: CMakeLists.txt
DebugFromTerminal/Src/: main.c  stm32h7xx_hal_msp.c
